@@ -271,8 +271,16 @@ describe 'Custom configs' do
     Sanitize.clean(input, :elements => ['br'], :output => :html).should.equal('foo<br>bar<br>baz')
   end
 
+  should 'escape filtered nodes and their contents when :escape_only == true' do
+    Sanitize.clean('foo bar <div>baz<span>quux</span></div>', :escape_only => true).should.equal('foo bar &lt;div&gt;baz&amp;lt;span&amp;gt;quux&amp;lt;/span&amp;gt;&lt;/div&gt;')
+  end
+
   should 'remove the contents of filtered nodes when :remove_contents == true' do
     Sanitize.clean('foo bar <div>baz<span>quux</span></div>', :remove_contents => true).should.equal('foo bar ')
+  end
+
+  should 'ensure that :remove_contents takes precedence over :escape_only when both == true' do
+    Sanitize.clean('foo bar <div>baz<span>quux</span></div>', :escape_only => true, :remove_contents => true).should.equal('foo bar ')
   end
 end
 
