@@ -2,8 +2,11 @@ Sanitize History
 ================================================================================
 
 Version 1.2.1 (git)
+  * Added an :escape_only config setting. If set to true, Sanitize will escape
+    non-whitelisted elements and their contents instead of removing them.
   * Added a :remove_contents config setting. If set to true, Sanitize will
-    remove the contents of filtered nodes in addition to the nodes themselves.
+    remove the contents of non-whitelisted elements in addition to the elements
+    themselves.
   * The environment hash passed into transformers now includes a :node_name item
     containing the lowercase name of the current HTML node (e.g. "div").
   * Returning anything other than a Hash or nil from a transformer will now
